--- a/style.css
+++ b/style.css
@@ -109,17 +109,26 @@ body {
 }
 .mailbox-container {
     position: absolute;
-    margin-top: 65px;
-    margin-left: 305px;
+    margin-top: 100px;
+    margin-left: 315px;
     width: 75vw;
-    height: 88vh;
-}
-.mailbox {
+    height: 82vh;
     background: #373737;
-    width: 100%;
-    height: 100%;
     border-radius: 10px;
     border: 5px solid #1c1c1c;
+}
+.mailbox {
+    width: 100%;
+    height: 90%;
+}
+#selectAllButton {
+    margin-left: 7px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+.mailbox-control-panel {
+    border-radius: 5px;
+    border: 10px solid #1c1c1c;
 }
 .mailbox-inside-element {
     width: 99.8%;
@@ -200,10 +209,11 @@ body {
     width: 140px;
     height: 26.7px;
     padding-top: 8px;
+    border-radius: 5px;
 }
 .sidebar-folders-navigation-new-folder-container {
     width: 300px;
-    height: 400px;
+    height: 90px;
     display: flex;
 }
 .sidebar-folders-navigation-new-folder {
@@ -237,4 +247,56 @@ body {
 .sidebar-folders-navigation-new-folder-text {
     padding-left: 8px;
     padding-top: 4px;
+}
+.sidebar-folders-navigation-new-folder-name-container {
+    display: flex;
+    height: 16px;
+}
+.sidebar-folders-navigation-new-folder-name {
+    height: 20px;
+    width: 200px;
+    text-align: center;
+    caret-color: #111111;
+    margin-right: auto;
+    margin-left: auto;
+    background: #111111;
+    color: #f4f4f4;
+    font-weight: bolder;
+    font-family: sans-serif;
+    border: 2px solid #f4f4f4;
+    border-radius: 5px;
+}
+.sidebar-folders-navigation-new-folder-name:focus {
+    outline: none;
+}
+.sidebar-folders-navigation-delete-folder-container {
+    display: flex;
+}
+.sidebar-folders-navigation-delete-folder {
+    width: 180px;
+    height: 40px;
+    margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    border: none;
+    color: #f4f4f4;
+    background: #4f7faf;
+    box-shadow: 2px 2px 10px #111111;
+    font-size: 15px;
+    font-weight: bolder;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    text-align: center;
+}
+.sidebar-folders-navigation-delete-folder:hover {
+    background: #6f9fcf;
+    cursor: pointer;
+}
+.sidebar-folders-navigation-delete-folder:focus {
+    outline: none;
+}
+.sidebar-folders-navigation-delete-folder:active {
+    background: #2a6db7;
 }
