--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ body {
     width: 300px;
     height: 100%;
     margin-top: 60px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: scroll;
+    overflow-y: scroll;
     background: #1c1c1c;
 }
 
@@ -90,7 +90,6 @@ body {
 .sidebar-write-button:hover {
     background: #6f9fcf;
     cursor: pointer;
-
 }
 .sidebar-write-button:active {
     background: #2a6db7;
@@ -109,20 +108,21 @@ body {
 }
 .mailbox-container {
     position: absolute;
-    margin-top: 100px;
+    margin-top: 75px;
     margin-left: 315px;
     width: 75vw;
     height: 82vh;
     background: #373737;
     border-radius: 10px;
     border: 5px solid #1c1c1c;
+    overflow-y: scroll;
 }
 .mailbox {
     width: 100%;
     height: 100%;
 }
 #selectAllButton {
-    margin-left: 7px;
+    margin-left: 14px;
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -302,5 +302,33 @@ body {
     outline: none;
 }
 .sidebar-folders-navigation-delete-folder:active {
+    background: #2a6db7;
+}
+.mailbox-control-panel-delete-button {
+    width: 180px;
+    height: 40px;
+    margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
+    color: #f4f4f4;
+    background: #4f7faf;
+    box-shadow: 2px 2px 10px #111111;
+    font-size: 15px;
+    font-weight: bolder;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    text-align: center;
+}
+.mailbox-control-panel-delete-button:focus {
+    outline: none;
+}
+.mailbox-control-panel-delete-button:hover {
+    background: #6f9fcf;
+    cursor: pointer;
+}
+.mailbox-control-panel-delete-button:active {
     background: #2a6db7;
 }
